--- a/www.rolaxhotel.com/css/index.css
+++ b/www.rolaxhotel.com/css/index.css
@@ -4,7 +4,7 @@
     box-sizing:border-box;
 }
 section.bg-img{
-    background-image: url(https://github.com/Neekhilpatil/Projects/blob/main/www.rolaxhotel.com/img/bg.jpg);
+    background-image: url(/Projects/www.rolaxhotel.com/img/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover; 
 
@@ -158,7 +158,7 @@ li {
 /* <!-- <-------------Section-4 starts------------>  */
 
 .bg-img2{
-    background-image: url(https://github.com/Neekhilpatil/Projects/blob/main/www.rolaxhotel.com/img/video-bg.jpg.webp);
+    background-image: url(/Projects/www.rolaxhotel.com/img/video-bg.jpg.webp);
     background-size:cover ;
     background-repeat: no-repeat;
     height: 100vh;
